[arx.monks.cloud] Generate investments from data

--- a/arx.monks.cloud/src/html/case-study/index.njk
+++ b/arx.monks.cloud/src/html/case-study/index.njk
@@ -28,7 +28,7 @@
     <div class="mdc-layout-grid__inner">
       <div class="box mdc-layout-grid__cell">
         <div class="mdc-layout-grid__inner">
-          <div class="box--logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <svg width="140" height="55" viewBox="0 0 187 55" fill="none" xmlns="http://www.w3.org/2000/svg">
               <title>[Logo] TES</title>
               <path fill-rule="evenodd" clip-rule="evenodd"
@@ -42,7 +42,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr>
           </div>
-          <div class="box--text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3 class="sub-title">TES Vsetin</h3>
             <p>Financial restructuring transaction to position for&nbsp;growth</p>
           </div>
@@ -50,7 +50,7 @@
       </div>
       <div class="box mdc-layout-grid__cell">
         <div class="mdc-layout-grid__inner">
-          <div class="box--logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <svg width="290" height="42" viewBox="0 0 290 42" fill="none" xmlns="http://www.w3.org/2000/svg">
               <title>[Logo] DC Bled</title>
               <path
@@ -123,7 +123,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr>
           </div>
-          <div class="box--text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3 class="sub-title">DC Bled</h3>
             <p>Slovenian healthcare services consolidation</p>
           </div>
@@ -131,7 +131,7 @@
       </div>
       <div class="box mdc-layout-grid__cell">
         <div class="mdc-layout-grid__inner">
-          <div class="box--logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <svg width="155" height="108" viewBox="0 0 155 108" fill="none" xmlns="http://www.w3.org/2000/svg">
               <title>[Logo] Anwis</title>
               <path
@@ -155,7 +155,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr>
           </div>
-          <div class="box--text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3 class="sub-title">Anwis</h3>
             <p>Driving growth via internationali&shy;zation and digitalisation</p>
           </div>
@@ -164,7 +164,7 @@
 
       <div class="box mdc-layout-grid__cell">
         <div class="mdc-layout-grid__inner">
-          <div class="box--logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <svg width="88" height="75" viewBox="0 0 88 75" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <title>[Logo] KVK</title>
               <rect width="88" height="75" fill="url(#pattern0)"/>
@@ -179,7 +179,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr>
           </div>
-          <div class="box--text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3 class="sub-title">KVK</h3>
             <p>Realising synergies in a construction materials consolidation</p>
           </div>
@@ -187,7 +187,7 @@
       </div>
       <div class="box mdc-layout-grid__cell">
         <div class="mdc-layout-grid__inner">
-          <div class="box--logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <svg width="162" height="122" viewBox="0 0 162 122" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <title>[Logo] Ergis</title>
               <rect width="162" height="122" fill="url(#pattern0)"/>
@@ -202,7 +202,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr>
           </div>
-          <div class="box--text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3 class="sub-title">Ergis</h3>
             <p>Significant growth via acquisitions</p>
           </div>
@@ -210,7 +210,7 @@
       </div>
       <div class="box mdc-layout-grid__cell">
         <div class="mdc-layout-grid__inner">
-          <div class="box--logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <svg width="182" height="63" viewBox="0 0 182 63" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <title>[Logo] Lexum</title>
               <rect width="182" height="63" fill="url(#pattern0)"/>
@@ -225,7 +225,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr>
           </div>
-          <div class="box--text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3 class="sub-title">Lexum</h3>
             <p>Creating the leading opthamology group in Central Europe</p>
           </div>
@@ -234,7 +234,7 @@
 
       <div class="box mdc-layout-grid__cell">
         <div class="mdc-layout-grid__inner">
-          <div class="box--logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <svg width="224" height="56" viewBox="0 0 224 56" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <title>[Logo] Donit</title>
               <rect width="224" height="56" fill="url(#pattern0)"/>
@@ -249,7 +249,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr>
           </div>
-          <div class="box--text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3 class="sub-title">Donit Tesnit</h3>
             <p>Succession solution transaction for a Slovenian industrial manufacturer</p>
           </div>
@@ -257,7 +257,7 @@
       </div>
       <div class="box mdc-layout-grid__cell">
         <div class="mdc-layout-grid__inner">
-          <div class="box--logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <svg width="188" height="52" viewBox="0 0 188 52" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <title>[Logo] VUES</title>
               <rect width="188" height="52" fill="url(#pattern0)"/>
@@ -272,7 +272,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr>
           </div>
-          <div class="box--text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3 class="sub-title">VUES</h3>
             <p>Capitalising on Czech R&amp;D capabilities to drive value</p>
           </div>
@@ -280,7 +280,7 @@
       </div>
       <div class="box mdc-layout-grid__cell">
         <div class="mdc-layout-grid__inner">
-          <div class="box--logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <svg width="224" height="224" viewBox="0 0 224 224" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <title>[Logo] Lanex</title>
               <rect width="224" height="224" fill="url(#pattern0)"/>
@@ -295,7 +295,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <hr>
           </div>
-          <div class="box--text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="box__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3 class="sub-title">Lanex</h3>
             <p>Combining companies to create a significant fall protection equipment
               manufacturer</p>
