--- a/arx.monks.cloud/src/stylesheets/investments.scss
+++ b/arx.monks.cloud/src/stylesheets/investments.scss
@@ -31,14 +31,36 @@
   padding: 10em 4em;
 }
 
+.box__logo {
+  border-bottom: 1px solid #DBDBDB;
+  width: 100%;
+  height: 245px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-.box--text {
-  .investment-description {
-    min-height: 60px;
+.box__text {
+  h3.sub-title {
+    margin-top: 1.458em;
+    margin-bottom: 0.4166em;
   }
-  p.filter {
+}
+
+.box__info {
+  line-height: 1.6;
+  dt {
     color: var(--mdc-theme--secondary);
+    font-weight: bold;
     opacity: 1;
-    margin: 4px 0;
+    float: left;
+    clear: right;
+    &::after {
+      content: ":";
+      padding-right: 1ex;
+    }
+  }
+  dd {
+    clear: right;
   }
 }
