ARX - html + přejmenovávání class

--- a/arx.monks.cloud/src/html/contact/index.njk
+++ b/arx.monks.cloud/src/html/contact/index.njk
@@ -9,7 +9,7 @@
   <section class="intro">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div class="yellow-box intro-box mdc-layout-grid__cell">
+        <div class="yellow-box intro__box mdc-layout-grid__cell">
           <p>Contacts</p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
