--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -9,8 +9,7 @@
   <section class="intro">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div
-          class="intro-box white-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="intro__box white-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
           <p><span>We are proud of our<br>20-year track record</span> of building great companies in
             successful partnerships with business owners and managers.</p>
           <div class="button">
@@ -30,7 +29,7 @@
   </div>
 
   <section class="about">
-    <div class="column--1">
+    <div class="column-1">
       <div class="jahudka">
         <h3 class="underline--light">Mission statement</h3>
         <p>Our core objective is to form successful partnerships with owners, managers
@@ -39,7 +38,7 @@
           entrepreneurs.</p>
       </div>
     </div>
-    <div class="column--2 about--bg">
+    <div class="column-2 about--bg">
       <div class="boruvka">
         <h3 class="underline--light">Background history</h3>
         <p>With more than € 300&nbsp;million raised in four funds, ARX has become a
@@ -51,7 +50,7 @@
   </section>
 
   <section class="investments">
-    <div class="column--1 investments--bg">
+    <div class="column-1 investments--bg">
       <div class="broskev">
         <h3>Facts and figures</h3>
       </div>
@@ -106,7 +105,7 @@
   </section>
 
   <section class="team">
-    <div class="column--1">
+    <div class="column-1">
       <div class="jahudka">
         <h3>Meet our team</h3>
         <div class="button">
@@ -114,7 +113,7 @@
         </div>
       </div>
     </div>
-    <div class="column--2">
+    <div class="column-2">
       <div class="boruvka">
       </div>
     </div>
