--- a/arx.monks.cloud/src/html/news/index.njk
+++ b/arx.monks.cloud/src/html/news/index.njk
@@ -9,7 +9,7 @@
   <section class="intro">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div class="intro-box white-box mdc-layout-grid__cell">
+        <div class="intro__box white-box mdc-layout-grid__cell">
           <p>News</p>
         </div>
       </div>
