--- a/arx.monks.cloud/src/html/team/index.njk
+++ b/arx.monks.cloud/src/html/team/index.njk
@@ -9,7 +9,7 @@
 <section class="intro">
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
-      <div class="white-box intro-box mdc-layout-grid__cell">
+      <div class="white-box intro__box mdc-layout-grid__cell">
         <p>Our team members personally invest in each transaction, our interests are
           aligned with our partners in every situation.</p>
       </div>
