--- a/arx.monks.cloud/src/html/case-study/index.njk
+++ b/arx.monks.cloud/src/html/case-study/index.njk
@@ -9,7 +9,7 @@
 <section class="intro">
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
-      <div class="yellow-box intro-box mdc-layout-grid__cell">
+      <div class="box--yellow intro__box mdc-layout-grid__cell">
         <p>Case Study</p>
       </div>
     </div>
