--- a/arx.monks.cloud/src/html/work-with-us/index.njk
+++ b/arx.monks.cloud/src/html/work-with-us/index.njk
@@ -10,7 +10,7 @@
 <section class="intro">
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
-      <div class="dark-box intro-box mdc-layout-grid__cell">
+      <div class="intro__box box--dark mdc-layout-grid__cell">
         <p>How we work with our companies.</p>
       </div>
     </div>
@@ -19,7 +19,7 @@
 <div class="mdc-layout-grid layout-arx">
   <div class="mdc-layout-grid__inner">
     <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <div class="border-bg"></div>
+      <div class="square-icon"></div>
     </div>
   </div>
 </div>
@@ -42,13 +42,13 @@
         <p>We’ve developed a deep pool of talented industry experts over our 20-year history that can help strengthen
           management teams and boards.</p>
       </div>
-      <div class="dark-box left-padding_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="box--dark left-padding_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="underline--light">Keeping debt levels low</h3>
         <p>We don’t believe in burdening our companies with excessive debt. We keep
           debt levels low so the company can pursue opportunities for&nbsp;growth.</p>
       </div>
       <div
-        class="right-padding_box yellow-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        class="right-padding_box box--yellow mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="underline--dark">Positioning businesses for the future</h3>
         <p>We have proven expertise in positioning former family-owned businesses for eventual exits to international
           strategic buyers.</p>
@@ -94,7 +94,7 @@
 <section class="intermediaries">
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
-      <div class="intermediaries_main-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="intermediaries__main-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h2>Intermediaries</h2>
         <p class="sub-title">For over 20&nbsp;years we&nbsp;have worked with intermediaries of all types&nbsp;&ndash;
           whether individual deal introducers or multinational institutional
@@ -103,7 +103,7 @@
           capital, or in a situation where an intermediary introduces an exclusive
           opportunity to ARX, our approach is consistent:</p>
       </div>
-      <div class="intermediaries_side-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="intermediaries__side-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="underline--light">Responsiveness and transparency</h3>
         <p class="text-opacity">We are not time wasters. We provide feedback promptly and clearly regarding our level of interest in a
           transaction.</p>
