--- a/arx.monks.cloud/src/stylesheets/strategy.scss
+++ b/arx.monks.cloud/src/stylesheets/strategy.scss
@@ -27,7 +27,7 @@
   }
 }
 
-.intro-box {
+.intro__box {
   padding: 4em;
 }
 
@@ -36,26 +36,52 @@
     color: var(--mdc-theme--third);
   }
 
-  .dark-box h3, .dark-box p {
+  .box--dark h3, .box--dark p {
     color: var(--mdc-theme--primary);
   }
 }
 
-.transaction-boxes {
-  @media (min-width: 540px) {
-    .column--1, .column--2 {
-      max-width: 50vw;
-      display: inline-flex;
-    }
-    .jahudka, .boruvka {
-      box-sizing: border-box;
-      max-width: calc(var(--arx-layout-max-width) / 2);
-      padding: 6em;
-    }
-    .ovocna-zmrzlina {
-      padding: 3em 6em;
-      background: var(--mdc-theme--primary);
-      box-shadow: 0 20px 30px rgba(0, 0, 0, 0.07);
-    }
+@media (min-width: 1440px) {
+  .jahudka, .boruvka {
+    padding: 6em;
+  }
+  .box--colored {
+    min-height: 600px;
+  }
+}
+
+@media (min-width: 540px) and (max-width: 1439px) {
+  .jahudka, .boruvka {
+    padding: 3em;
+  }
+}
+@media (max-width: 539px) {
+  .jahudka, .boruvka {
+    padding: 1em;
+  }
+}
+
+@media (min-width: 540px) {
+  .column-1, .column-2 {
+    max-width: 50vw;
+    display: inline-flex;
+  }
+  .column-1 {
+    justify-content: flex-end;
+  }
+  .jahudka, .boruvka {
+    box-sizing: border-box;
+    max-width: calc(var(--arx-layout-max-width) / 2);
+  }
+  .jahudka {
+    justify-content: flex-end;
+  }
+  .ovocna-zmrzlina {
+    background: var(--mdc-theme--primary);
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.07);
+  }
+  .row-1, .row-2, .row-3 {
+    display: flex;
+    flex-grow: 1;
   }
 }
