ARX - Podstránka Contact: doladění adresy + stylizace

--- a/arx.monks.cloud/src/html/contact/index.njk
+++ b/arx.monks.cloud/src/html/contact/index.njk
@@ -12,14 +12,21 @@
         <div class="yellow-box intro__box mdc-layout-grid__cell">
           <p>Contacts</p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-        </div>
-        <div class="mdc-layout-grid__cell">
-          <h2>ARX Equity Partners s.r.o.</h2>
-          <span>28. října 12</span><br>
-          <span>110 00 Praha 1</span><br>
-          <span><a href="tel:+420 22 423 5399">Tel.: +420 22 423 5399</a></span><br>
-          <span><a href="mailto:praha@arxequity.com">praha@arxequity.com</a></span><br>
+      </div>
+    </div>
+  </section>
+  <section class="contact">
+    <div class="mdc-layout-grid layout-arx">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2 itemprop="name">ARX Equity Partners s.r.o.</h2>
+          <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
+            <span itemprop="streetAddress">28. října 12</span><br>
+            <span itemprop="postalCode">110 00</span>
+            <span itemprop="addressLocality">Praha 1</span><br>
+          </div>
+          <span><a itemprop="telephone" href="tel:+420 22 423 5399">Tel.: <b>+420 22 423 5399</b></a></span><br>
+          <span><a itemprop="email" href="mailto:praha@arxequity.com"><b>praha@arxequity.com</b></a></span><br>
         </div>
       </div>
     </div>
@@ -27,7 +34,7 @@
 
   <div class="contact--map mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
     <a title="Show ARX office on map" target="_blank"
-      href="https://www.google.com/maps/place/Arx+Equity+Partners+s.r.o./@50.0835359,14.420448,17z/data=!3m1!4b1!4m5!3m4!1s0x470b94ec3596373b:0xeba19b406adab57a!8m2!3d50.0835325!4d14.4226367?hl=cs-CZ"><img
+       href="https://www.google.com/maps/place/Arx+Equity+Partners+s.r.o./@50.0835359,14.420448,17z/data=!3m1!4b1!4m5!3m4!1s0x470b94ec3596373b:0xeba19b406adab57a!8m2!3d50.0835325!4d14.4226367?hl=cs-CZ"><img
         alt="ARX on map" src="/assets/img/map-contact.jpg" width="100%" height="auto"></a>
   </div>
 
