ARX - Přejmenování class a "úklid" kódu

--- a/arx.monks.cloud/src/html/contact/index.njk
+++ b/arx.monks.cloud/src/html/contact/index.njk
@@ -9,7 +9,7 @@
   <section class="intro">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div class="yellow-box intro__box mdc-layout-grid__cell">
+        <div class="intro__box box--yellow mdc-layout-grid__cell">
           <p>Contacts</p>
         </div>
       </div>
@@ -32,7 +32,7 @@
     </div>
   </section>
 
-  <div class="contact--map mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+  <div class="contact__map mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
     <a title="Show ARX office on map" target="_blank"
        href="https://www.google.com/maps/place/Arx+Equity+Partners+s.r.o./@50.0835359,14.420448,17z/data=!3m1!4b1!4m5!3m4!1s0x470b94ec3596373b:0xeba19b406adab57a!8m2!3d50.0835325!4d14.4226367?hl=cs-CZ"><img
         alt="ARX on map" src="/assets/img/map-contact.jpg" width="100%" height="auto"></a>
