--- a/arx.monks.cloud/src/html/strategy/index.njk
+++ b/arx.monks.cloud/src/html/strategy/index.njk
@@ -21,7 +21,7 @@
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
       <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="border-bg"></div>
+        <div class="square-icon"></div>
       </div>
     </div>
   </div>
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="row-2">
-      <div class="box--dark box--colored column-1">
+      <div class="box--dark box--specific-height column-1">
         <div class="jahudka">
           <h3 class="underline--light">Management Buyouts (MBO) / Buy-ins (MBI)</h3>
           <p>Managers of a company would like to become co-owners of the business, or an
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div
-        class="box--yellow box--colored column-2">
+        class="box--yellow box--specific-height column-2">
         <div class="boruvka">
           <h3 class="underline--dark">Growth Equity</h3>
           <p>A&nbsp;company seeking capital to strengthen its market position, acquire a
