--- a/arx.monks.cloud/src/html/work-with-us/index.njk
+++ b/arx.monks.cloud/src/html/work-with-us/index.njk
@@ -7,94 +7,110 @@
 
 {% block main %}
 
-<section class="intro">
+  <section class="intro">
+    <div class="mdc-layout-grid layout-arx">
+      <div class="mdc-layout-grid__inner">
+        <div class="intro__box box--dark mdc-layout-grid__cell">
+          <p>How we work with our companies.</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
-      <div class="intro__box box--dark mdc-layout-grid__cell">
-        <p>How we work with our companies.</p>
+      <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="square-icon"></div>
       </div>
     </div>
   </div>
-</section>
-<div class="mdc-layout-grid layout-arx">
-  <div class="mdc-layout-grid__inner">
-    <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <div class="square-icon"></div>
-    </div>
-  </div>
-</div>
-<section class="transaction">
-  <div class="mdc-layout-grid layout-arx">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Entrepreneurs</h2>
+  <section class="transaction">
+    <div class="mdc-layout-grid layout-arx">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Entrepreneurs</h2>
+        </div>
       </div>
-      <div class="left-padding_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3 class="underline--light">Expansion through acquisitions or new markets</h3>
-        <p>Over half of the ARX investments over the last decade have achieved growth
-          through completing an add-on acquisition or entering a new geographic market.
-          ARX has the capability to invest follow-on equity into its portfolio companies
-          to fund growth.</p>
+    </div>
+    <div class="row-1">
+      <div class="column-1 ovocna-zmrzlina">
+        <div class="jahudka">
+          <h3 class="underline--light">Expansion through acquisitions or new markets</h3>
+          <p>Over half of the ARX investments over the last decade have achieved growth
+            through completing an add-on acquisition or entering a new geographic market.
+            ARX has the capability to invest follow-on equity into its portfolio companies
+            to fund growth.</p>
+        </div>
+      </div>
+      <div class="column-2">
+        <div class="boruvka">
+          <h3 class="underline--light">Introducing the right people</h3>
+          <p>We’ve developed a deep pool of talented industry experts over our 20-year history that can help strengthen
+            management teams and boards.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row-2">
+      <div class="box--dark box--colored column-1">
+        <div class="jahudka">
+          <h3 class="underline--light">Keeping debt levels low</h3>
+          <p>We don’t believe in burdening our companies with excessive debt. We keep
+            debt levels low so the company can pursue opportunities for&nbsp;growth.</p>
+        </div>
       </div>
       <div
-        class="right-padding_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3 class="underline--light">Introducing the right people</h3>
-        <p>We’ve developed a deep pool of talented industry experts over our 20-year history that can help strengthen
-          management teams and boards.</p>
-      </div>
-      <div class="box--dark left-padding_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3 class="underline--light">Keeping debt levels low</h3>
-        <p>We don’t believe in burdening our companies with excessive debt. We keep
-          debt levels low so the company can pursue opportunities for&nbsp;growth.</p>
-      </div>
-      <div
-        class="right-padding_box box--yellow mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3 class="underline--dark">Positioning businesses for the future</h3>
-        <p>We have proven expertise in positioning former family-owned businesses for eventual exits to international
-          strategic buyers.</p>
-      </div>
-      <div
-        class="left-padding_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3 class="underline--light">Non-executive board development</h3>
-        <p>ARX adds value through its systematic approach to introducing best-practice corporate governance, reporting
-          standards and strategic guidance.</p>
+        class="box--yellow box--colored column-2">
+        <div class="boruvka">
+          <h3 class="underline--dark">Positioning businesses for the future</h3>
+          <p>We have proven expertise in positioning former family-owned businesses for eventual exits to international
+            strategic buyers.</p>
+        </div>
       </div>
     </div>
-  </div>
-</section>
-<section class="managers">
-  <div class="mdc-layout-grid layout-arx">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Managers</h2>
-        <p class="sub-title">We work with our portfolio company leadership teams according to two guiding principles.</p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-desktop">
-        <h3 class="underline--light">Ownership</h3>
-        <p class="text-opacity">We believe in creating ownership structures where our portfolio company
-          managers become shareholders alongside ARX. Whether in a management buyout (MBO)
-          or a management buy-in (MBI) structure, equity-oriented incentive structures
-          create strong alignment and a solid partnership with our portfolio company
-          management&nbsp;teams.</p>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-desktop">
-        <h3 class="underline--light">Autonomy</h3>
-        <p class="text-opacity">We believe in working with the most qualified and committed management teams
-          and providing them autonomy to run the day-to-day activities of our companies.
-          We are totally committed to creating shared value within our portfolio companies
-          and we provide entrepreneurial managers the necessary level of independence to
-          deliver results while supporting them from a non-executive&nbsp;level.</p>
-        <p class="text-opacity">We encourage any prospective manager or entrepreneur considering a
-          transaction partnership with ARX to directly check our references and
-          track-record.</p>
+    <div class="row-3">
+      <div
+        class="column-1 ovocna-zmrzlina">
+        <div class="jahudka">
+          <h3 class="underline--light">Non-executive board development</h3>
+          <p>ARX adds value through its systematic approach to introducing best-practice corporate governance, reporting
+            standards and strategic guidance.</p>
+        </div>
       </div>
     </div>
-  </div>
-</section>
-<section class="intermediaries">
-  <div class="mdc-layout-grid layout-arx">
-    <div class="mdc-layout-grid__inner">
-      <div class="intermediaries__main-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+  </section>
+
+  <section class="managers">
+    <div class="mdc-layout-grid layout-arx">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Managers</h2>
+          <p class="sub-title">We work with our portfolio company leadership teams according to two guiding
+            principles.</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-desktop">
+          <h3 class="underline--light">Ownership</h3>
+          <p class="text-opacity">We believe in creating ownership structures where our portfolio company
+            managers become shareholders alongside ARX. Whether in a management buyout (MBO)
+            or a management buy-in (MBI) structure, equity-oriented incentive structures
+            create strong alignment and a solid partnership with our portfolio company
+            management&nbsp;teams.</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-desktop">
+          <h3 class="underline--light">Autonomy</h3>
+          <p class="text-opacity">We believe in working with the most qualified and committed management teams
+            and providing them autonomy to run the day-to-day activities of our companies.
+            We are totally committed to creating shared value within our portfolio companies
+            and we provide entrepreneurial managers the necessary level of independence to
+            deliver results while supporting them from a non-executive&nbsp;level.</p>
+          <p class="text-opacity">We encourage any prospective manager or entrepreneur considering a
+            transaction partnership with ARX to directly check our references and
+            track-record.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="intermediaries">
+    <div class="column-1">
+      <div class="jahudka">
         <h2>Intermediaries</h2>
         <p class="sub-title">For over 20&nbsp;years we&nbsp;have worked with intermediaries of all types&nbsp;&ndash;
           whether individual deal introducers or multinational institutional
@@ -103,11 +119,13 @@
           capital, or in a situation where an intermediary introduces an exclusive
           opportunity to ARX, our approach is consistent:</p>
       </div>
-      <div class="intermediaries__side-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+    </div>
+    <div class="column-2 ovocna-zmrzlina">
+      <div class="boruvka">
         <h3 class="underline--light">Responsiveness and transparency</h3>
-        <p class="text-opacity">We are not time wasters. We provide feedback promptly and clearly regarding our level of interest in a
+        <p class="text-opacity">We are not time wasters. We provide feedback promptly and clearly regarding our level
+          of interest in a
           transaction.</p>
-
         <h3 class="underline--light">Compensation</h3>
         <p class="text-opacity">We compensate buy-side intermediaries for exclusively introducing us to
           proprietary investment opportunities that get&nbsp;closed.</p>
@@ -119,6 +137,5 @@
           has been built over multiple&nbsp;deals.</p>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 {% endblock %}
