--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -9,11 +9,11 @@
   <section class="intro">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div class="intro__box white-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
+        <div class="intro__box box--white mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
           <p><span>We are proud of our<br>20-year track record</span> of building great companies in
             successful partnerships with business owners and managers.</p>
           <div class="button">
-            <a class="button--info" href="">MORE INFO</a>
+            <a class="button__info" href="">MORE INFO</a>
           </div>
         </div>
       </div>
@@ -23,14 +23,14 @@
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
       <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="border-bg"></div>
+        <div class="square-icon"></div>
       </div>
     </div>
   </div>
 
   <section class="about">
     <div class="column-1">
-      <div class="jahudka">
+      <div class="jahudka specific-height__box">
         <h3 class="underline--light">Mission statement</h3>
         <p>Our core objective is to form successful partnerships with owners, managers
           and other stakeholders to realise the full potential of our portfolio companies
@@ -38,7 +38,7 @@
           entrepreneurs.</p>
       </div>
     </div>
-    <div class="column-2 about--bg">
+    <div class="column-2 about__bg specific-height__box">
       <div class="boruvka">
         <h3 class="underline--light">Background history</h3>
         <p>With more than € 300&nbsp;million raised in four funds, ARX has become a
@@ -50,30 +50,30 @@
   </section>
 
   <section class="investments">
-    <div class="column-1 investments--bg">
+    <div class="column-1 investments__bg">
       <div class="broskev">
         <h3>Facts and figures</h3>
       </div>
     </div>
-    <div class="investments--box">
+    <div class="investments__box">
       <div class="box_row">
-        <div class="white-box">
+        <div class="box--white">
           <h4>$4.2B</h4>
           <p>committed capital under management</p>
         </div>
-        <div class="white-box">
+        <div class="box--white">
           <h4>$25M – 1B</h4>
           <p>committed capital under management</p>
         </div>
-        <div class="white-box">
+        <div class="box--white">
           <h4>$330M</h4>
           <p>committed capital under management</p>
         </div>
-        <div class="white-box">
+        <div class="box--white">
           <h4>$4B</h4>
           <p>committed capital under management</p>
         </div>
-        <div class="white-box">
+        <div class="box--white">
           <h4>100+</h4>
           <p>committed capital under management</p>
         </div>
@@ -84,8 +84,7 @@
   <section class="believes">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div
-          class="text-center mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-7-desktop">
+        <div class="text-center mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-7-desktop">
           <svg width="144" height="133" viewBox="0 0 144 133" fill="none" xmlns="http://www.w3.org/2000/svg">
             <title>[Icon] Our Believes</title>
             <path
@@ -109,7 +108,7 @@
       <div class="jahudka">
         <h3>Meet our team</h3>
         <div class="button">
-          <a class="button--info" href="">MORE INFO</a>
+          <a class="button__info" href="">MORE INFO</a>
         </div>
       </div>
     </div>
@@ -141,7 +140,7 @@
         {%- endfor -%}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <div class="button text-center">
-            <a class="button--info" href="/news/">VIEW ALL</a>
+            <a class="button__info" href="/news/">VIEW ALL</a>
           </div>
         </div>
       </div>
