--- a/arx.monks.cloud/src/html/investments/index.njk
+++ b/arx.monks.cloud/src/html/investments/index.njk
@@ -18,7 +18,7 @@
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
       <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="border-bg"></div>
+        <div class="square-icon"></div>
       </div>
     </div>
   </div>
@@ -98,7 +98,7 @@
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <div class="button text-center">
-            <a class="button--info" href="/news/">MORE INFO</a>
+            <a class="button__info" href="/news/">MORE INFO</a>
           </div>
         </div>
       </div>
