--- a/arx.monks.cloud/src/html/team/index.njk
+++ b/arx.monks.cloud/src/html/team/index.njk
@@ -19,7 +19,7 @@
 <div class="mdc-layout-grid layout-arx">
   <div class="mdc-layout-grid__inner">
     <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <div class="border-bg"></div>
+      <div class="square-icon"></div>
     </div>
   </div>
 </div>
